# projectforge

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.toml  docker-compose.yml  hello.py  project_management.db  pyproject.toml  requirements.txt
pages/: connections.py  dashboard.py  members.py  notes.py  projects.py  projects_tasks.py  reminders.py  tasks.py  teams.py  teams_members.py
utils/: database.py  models.py
