[project]
name = "projectforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jira>=3.5.0",
    "pandas>=2.0.0",
    "plotly>=5.14.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "streamlit>=1.28.0",
    "watchdog>=6.0.0",
]
